Enhancing 404 error page

--- a/content/404.md
+++ b/content/404.md
@@ -3,6 +3,8 @@ permalink: "404.html"
 title: "404 not found"
 ---
 
-This page hasn't been created yet.
+# An empty plot
+
+(This page hasn't been created yet.)
 
 [Return to the entrance](/)
